# Sentinel-Command

./: .dockerignore  .env.example  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  fly.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: backup.yml  close-external-prs.yml  dependabot-auto-merge.yml  deploy.yml  weekly-deps-refresh.yml
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: audit.py  cameras.py  gdpr.py  hls.py  incidents.py  install.py  integration.py  mcp_activity.py  mcp_keys.py  motion.py  nodes.py  notifications.py  sentinel.py  webhooks.py  well_known.py  ws.py
backend/app/core/: audit.py  auth.py  codec.py  config.py  csv_export.py  database.py  email.py  email_unsubscribe.py  email_worker.py  gdpr.py  integration_auth.py  limiter.py  migrations.py  plans.py  recipients.py  release_cache.py  sentinel_dispatch.py  sentry.py  versions.py
backend/app/mcp/: activity.py  server.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/templates/emails/: _layout.html.j2  camera_offline.body.html.j2  camera_offline.body.txt.j2  cameranode_disk_low.body.html.j2  cameranode_disk_low.body.txt.j2  cameranode_disk_low.subject.txt.j2  member_promotion_requested.body.html.j2  member_promotion_requested.body.txt.j2  node_offline.body.html.j2  node_offline.body.txt.j2  node_offline.subject.txt.j2  node_online.body.html.j2  node_online.body.txt.j2  node_online.subject.txt.j2  welcome.body.html.j2  welcome.body.txt.j2
backend/scripts/: backup_db.sh  install.sh  mcp-setup.ps1  mcp-setup.sh  restore_db.sh
backend/static/: index.html
backend/static/assets/: AdminPage-BrAV4ljz.js  AdminPage-D6Ws02hk.js  AdminPage-Dcx9M5eM.js  AdminPage-VQrXiThj.js  AdminPage-oW2aZMvz.js  DashboardPage-1RKdHvut.js  DashboardPage-B9vpLb3F.js  DashboardPage-BqWNFKCv.js  DashboardPage-D9M34u2f.js  DashboardPage-E-29pMpd.js  DashboardPage-X8JKCJ62.js  DocsPage-B0OG31uR.js  DocsPage-BCzUh3fS.js  DocsPage-D4HUmfV1.js  DocsPage-D8wIfef_.js  DocsPage-DLCJaWMg.js  DocsPage-DsI8I6A5.js  HelpTooltip-6FFC0FtC.js  HelpTooltip-CRh9zcM9.js  HelpTooltip-CU6x-NQT.js  HelpTooltip-S1e31KDY.js  HlsPlayer-BVZ-CzAz.js  HlsPlayer-CQPmyT5g.js  HlsPlayer-DaRXgvL7.js  HlsPlayer-Dvc7Oaet.js  HlsPlayer-HfkRpEfO.js  IncidentsPage-B2D6pwMv.js  IncidentsPage-Br-6q30f.js  IncidentsPage-CM_VCnz4.js  IncidentsPage-CP1nY8ji.js  IncidentsPage-D-UEg_ya.js  IncidentsPage-Db4boNaC.js  IntegrationsPage-CSWDg_1w.js  IntegrationsPage-D9yiov-t.js  IntegrationsPage-DFP7lrN4.js  IntegrationsPage-DL6gVx0a.js  LandingPage-BCsUIWb2.js  LandingPage-D0hlPRtj.js  LandingPage-DjWLoTNL.js  LegalPage-C_28dlsW.js  (+85 more)
backend/tests/: conftest.py  test_cameras.py  test_codec.py  test_email.py  test_email_templates.py  test_email_unsubscribe.py  test_gdpr.py  test_health.py  test_hls.py  test_integration_api.py  test_integration_keys.py  test_integration_motion.py  test_log_cleanup.py  test_member_promotion_request.py  test_motion_email_cooldown.py  test_nodes.py  test_notifications.py  test_plans.py  test_rate_limits.py  test_release_cache.py  test_request_context.py  test_security_txt.py  test_segment_cache_concurrency.py  test_sentinel.py  test_versions.py  test_webhooks.py  test_welcome_email.py  test_ws_auth.py  test_ws_manager.py
docs/: LAUNCH_HANDOFF.md
docs/image-specs/: dashboard-ia-diagram.json  hls-pipeline-diagram.json  mcp-workflow-diagram.json  motion-fsm-diagram.json  notifications-fanout-diagram.json  privacy-visual.json  security-hero.json  security-model-diagram.json  setup-wizard-diagram.json  system-architecture-diagram.json
docs/legal/: SUB_PROCESSORS.md
docs/runbooks/: DISASTER_RECOVERY.md  ON_CALL.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AddNodeModal.jsx  AppSidebar.jsx  CameraCard.jsx  CameraRecordingControls.jsx  CookieNotice.jsx  DocsDiagrams.jsx  ErrorBoundary.jsx  HeartbeatBanner.jsx  HlsPlayer.jsx  IncidentReportModal.jsx  InstallCameraNodeCard.jsx  InstallCloudNodeCard.jsx  KeyRotationModal.jsx  LandingFooter.jsx  LandingNav.jsx  Layout.jsx  Logo.jsx  NewIncidentModal.jsx  NodeStorageBar.jsx  NotificationBell.jsx  OrgAuditLogPanel.jsx  ToastContainer.jsx  WelcomeHero.jsx
frontend/src/hooks/: useMotionAlerts.jsx  useNotifications.jsx  usePlanInfo.jsx  useToasts.jsx
frontend/src/pages/: AdminPage.jsx  DashboardPage.jsx  DocsPage.jsx  IncidentsPage.jsx  IntegrationsPage.jsx  LandingPage.jsx  LegalPage.jsx  McpPage.jsx  PricingPage.jsx  SecurityPage.jsx  SentinelPage.jsx  SettingsPage.jsx  SignInPage.jsx  SignUpPage.jsx  TestHlsPage.jsx
frontend/src/pages/docs/: ApiRateLimits.jsx  ApiReference.jsx  Architecture.jsx  CameraGroups.jsx  CameraNodeSetup.jsx  CloudNodeSetup.jsx  Configuration.jsx  Dashboard.jsx  Deployment.jsx  Faq.jsx  GettingStarted.jsx  HomeAssistant.jsx  Mcp.jsx  MotionDetection.jsx  Notifications.jsx  Plans.jsx  Recording.jsx  Resources.jsx  SecurityProcedures.jsx  Sentinel.jsx  TerminalDashboard.jsx  Troubleshooting.jsx  context.jsx
frontend/src/services/: api.js
frontend/src/styles/: landing.css
frontend/tests/: App.routing.test.jsx
frontend/tests/components/: CameraRecordingControls.groups.test.jsx  DocsDiagrams.test.jsx  IncidentReportModal.test.jsx  InstallCameraNodeCard.test.jsx  InstallCloudNodeCard.test.jsx  OrgAuditLogPanel.test.jsx
frontend/tests/pages/: DocsPage.test.jsx  IncidentsPage.test.jsx  SettingsPage.cameraGroups.test.jsx
frontend/tests/services/: api.test.js
plans/: home-assistant-integration.md
