[project]
name = "sentinel-backend"
version = "2.1.2"
description = "Sentinel Command Center Backend - FastAPI with Clerk Auth"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "uvicorn>=0.51.0",
    "sqlalchemy>=2.0.51",
    "pydantic>=2.13.4",
    "python-dotenv>=1.0.0",
    # Pinned >=0.0.31 for CVE-2026-53538/53539/53540 — three DoS
    # advisories against 0.0.27 (Content-Length confusion, multipart
    # boundary collision, multipart injection). Supersedes the earlier
    # 0.0.27 pin for CVE-2026-42561. Dependabot / pip-audit will start
    # failing the strict scan if this slides back below 0.0.31.
    "python-multipart>=0.0.31",
    # Pinned >=2.13.0 for PYSEC-2026-175/177/178/179 — four advisories
    # against 2.12.1 (all fixed in 2.13.0) that landed after the last green
    # deploy and turned pip-audit --strict red even though no code changed.
    "pyjwt>=2.13.0",
    "httpx>=0.27.0",
    "svix>=1.96.1",
    "clerk-backend-api>=5.0.6",
    "slowapi>=0.1.10",
    "redis>=5.0.0",
    "websockets>=16.1",
    "fastmcp>=3.4.4",
    "sentry-sdk[fastapi]>=2.66.0",
    # IANA timezone database for Python's stdlib `zoneinfo`.
    # Required on Windows (where the OS doesn't ship the database) and
    # on slim Linux containers (alpine + python:slim) where /usr/share/
    # zoneinfo isn't included.  No-op overhead on systems that already
    # have the database.  Used by the heartbeat handler's per-camera
    # scheduled-recording check to interpret HH:MM in the org's tz.
    "tzdata>=2026.3",
    # Resend transactional email SDK.  Used for operator-critical
    # notifications (camera offline, node offline, disk critical, new
    # incident).  Free tier covers ~100 active orgs at v1 event scope;
    # we flip to Pro the same week motion-event emails ship.  Worker
    # pattern + EmailOutbox table in models.py decouple sends from
    # request handlers — see app/core/email_worker.py.
    "resend>=2.33.0",
    # Jinja2 for email templates (subject + body.txt + body.html per
    # event kind, sharing _layout.html.j2).  FastAPI vendors a copy
    # for Jinja2Templates but we depend on it directly so the email
    # path doesn't break if FastAPI ever drops the optional dep.
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.27.0",
    "ruff>=0.15.21",
    # pip-audit scans installed deps against the PyPA Advisory DB
    # (github.com/pypa/advisory-database).  Runs in CI before tests
    # so a known-bad transitive dep blocks the deploy.  Local dev:
    # ``cd backend && uv run pip-audit`` to scan on demand.
    "pip-audit>=2.10.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

# ── Ruff — Python linter + formatter ────────────────────────────────
# Conservative starting ruleset.  The codebase has years of un-linted
# code; turning on the full default ruleset would surface thousands of
# warnings at once and obscure real bugs in the noise.  Start with
# the high-signal rules + import sorting, expand later as the muscle
# memory takes hold:
#
#   F   = pyflakes — undefined names, unused imports, real bugs
#   E9  = syntax errors only (the rest of E is style)
#   W6  = whitespace + tab errors that break diffs
#   I   = isort — import ordering (auto-fixable via `ruff check --fix`)
#   B   = flake8-bugbear — likely-bug patterns (mutable default arg,
#         except: pass, etc.)
#   UP  = pyupgrade — modernize syntax for py3.12 (Optional[X] →
#         X | None, etc.)
#
# Format enforcement (ruff format --check) is intentionally NOT in
# CI yet.  Adding it would require a one-shot mass-format commit
# touching every Python file, which makes git blame harder to read.
# Run `cd backend && uv run ruff format` locally if you want
# consistent formatting; CI doesn't enforce it.
[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = ["F", "E9", "W6", "I", "B", "UP"]
# Ignore in any file:
#   B008  = function calls in default argument — FastAPI's
#           `Depends(...)` pattern triggers this on every endpoint.
#   UP045 = `Optional[X]` → `X | None` — current codebase mixes both
#           styles; flip in a separate cleanup pass when ready.
ignore = ["B008", "UP045"]

[tool.ruff.lint.per-file-ignores]
# Tests are allowed:
#   F401: unused imports (fixtures pulled in for side effect)
#   F811: redefinition (mark.parametrize patterns)
#   B017: pytest.raises(Exception) — broad-except is the point in
#         "this should fail somehow" tests
"tests/**" = ["F401", "F811", "B017"]
# __init__.py: re-export pattern relies on "unused" imports.
"**/__init__.py" = ["F401"]

[tool.uv]
# Transitive constraints — pin versions forced up from what the
# ecosystem currently resolves, without adding them as top-level deps.
#
# authlib: two stacked CVEs.
#   - GHSA-jj8c-mmj3-mmgv (CSRF in OAuth client state caching,
#     CVSS 5.4) — first authlib bump that landed in this project.
#   - GHSA-r95x-qfjj-fjj2 / CVE-2026-44681 (Open Redirect in
#     OpenIDImplicitGrant / OpenIDHybridGrant when the request
#     omits the `openid` scope; raw redirect_uri rendered as a 302
#     before scope validation).  Fixed in authlib 1.7.1.
# Pulled in by fastmcp; we don't use authlib's OAuth client or its
# OIDC grants, so neither vulnerable path is reachable in our code.
# Pin enforced for Dependabot-alert hygiene + pip-audit --strict.
# Remove the constraint once fastmcp's own authlib pin clears 1.7.1.
#
# urllib3: CVE-2026-44431 + CVE-2026-44432 (both fixed in 2.7.0).
# Pulled in transitively by httpx / requests / resend / sentry-sdk
# (whichever resolves first); pip-audit --strict in CI catches it
# and fails the deploy.  Remove this line once every direct dep we
# carry has bumped past needing < 2.7.
#
# idna: CVE-2026-45409 (fixed in 3.15).  Transitive via httpx / anyio /
# requests.  Surfaced in the PyPA advisory DB ~2026-05-24, after the
# last green deploy — pip-audit --strict started failing on it even
# though no code changed.  Remove once a direct dep's own pin clears
# idna 3.15.
#
# starlette: PYSEC-2026-161 (fixed in 1.0.1) + PYSEC-2026-248/249
# (fixed in 1.3.0/1.3.1). Transitive via fastapi. Same story — advisories
# landed during quiet weeks and turned the deploy red. 1.2.0 → 1.3.1 is
# accepted by fastapi's starlette range (uv resolves cleanly). Remove once
# fastapi's own pin moves past 1.3.1.
#
# pip: PYSEC-2026-196 (fixed in 26.1.2).  Present only because pip-audit
# (our dev-time scanner) pulls pip in to resolve deps, then --strict audits
# pip itself.  Advisory landed ~2026-06 and turned the scan red even though
# no code changed.  Dev/CI surface only — pip isn't shipped in the app
# image.  Remove once pip-audit's own pin clears 26.1.2.
constraint-dependencies = [
    "authlib>=1.7.1",
    "urllib3>=2.7.0",
    "idna>=3.15",
    "starlette>=1.3.1",
    "pip>=26.1.2",
    # cryptography: GHSA-537c-gmf6-5ccf (fixed in 48.0.1). Transitive via
    # clerk-backend-api / authlib. Remove once a direct dep's own pin
    # clears cryptography 48.0.1.
    "cryptography>=48.0.1",
    # joserfc: CVE-2026-48990 (fixed in 1.6.7). Transitive via
    # clerk-backend-api. Remove once clerk's own pin clears 1.6.7.
    "joserfc>=1.6.7",
    # msgpack: GHSA-6v7p-g79w-8964 (fixed in 1.2.1). Transitive via
    # fastmcp / mcp SDK. Remove once fastmcp's own pin clears 1.2.1.
    "msgpack>=1.2.1",
    # pydantic-settings: GHSA-4xgf-cpjx-pc3j (fixed in 2.14.2). Transitive
    # via fastmcp. Remove once fastmcp's own pin clears 2.14.2.
    "pydantic-settings>=2.14.2",
]